--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body{
   z-index: 10;
   background-color: none;
   border-radius: 5px;
+  flex-wrap: wrap;
 
 }
 .table-inner{
@@ -27,8 +28,14 @@ body{
   border: 2px solid black;
   margin: 4px;
   z-index: 0;
+  text-align: center;
+  font-size: 65px;
 }
-.table-inner .empty-square{
-  border: 0;
+.empty-square{
+  margin: 4px;
+  width: 100px;
+  height: 100px;
+  background-color: none;
+  border: 2px solid transparent;
 
 }
